<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="pull_to_refresh_pull_label">Pull to refresh…</string>
    <string name="pull_to_refresh_refreshing_label">Loading…</string>
    <string name="pull_to_refresh_release_label">Release to refresh…</string>
    <string name="pull_to_refresh_from_bottom_pull_label">@string/pull_to_refresh_pull_label</string>
    <string name="pull_to_refresh_from_bottom_refreshing_label">@string/pull_to_refresh_refreshing_label</string>
    <string name="pull_to_refresh_from_bottom_release_label">@string/pull_to_refresh_release_label</string>
    <string name="action_settings">Settings</string>
    <string name="addPatient">设为默认</string>
    <string name="add_attention">加关注</string>
    <string name="add_patient">添加就诊人</string>
    <string name="age">年龄</string>
    <string name="agree">&lt;&lt;用户服务协议>></string>
    <string name="alter_btn_i_know">我知道了</string>
    <string name="alter_cancel">取消</string>
    <string name="alter_cancel_reg">"一个月内取消三次，将无法预约挂号
您确定取消本次预约吗？"</string>
    <string name="alter_complete_info">是否完善个人信息,完成建档?</string>
    <string name="alter_dialog_cancel">取消</string>
    <string name="alter_dialog_confirm">确定</string>
    <string name="alter_logout">退出后不会删除任何历史数据，下次登录依然可以使用本账号</string>
    <string name="alter_logout_content">"你的账号在另一地点登录
你已经退出！"</string>
    <string name="alter_logout_yes">退出登录</string>
    <string name="alter_new_version">发现新版本</string>
    <string name="alter_no">否</string>
    <string name="alter_pay_result_fail">支付不成功</string>
    <string name="alter_pay_result_success">您已成功付款</string>
    <string name="alter_report">"该报告单已保存。您可以在
\"个人中心\"内的\"我的报告\"查看"</string>
    <string name="alter_report_btn">我知道了</string>
    <string name="alter_sigin_err">"您的掌医通账户于%1$s在在
其他设备登录，您已退出登录。
如非本人操作，登录密码可能已经泄露，
请立即登录修改。"</string>
    <string name="alter_signin">我知道了</string>
    <string name="alter_star">关注成功</string>
    <string name="alter_tip">提示</string>
    <string name="alter_update_content">检测到新版本，立即更新吗？</string>
    <string name="alter_update_no">下次再说</string>
    <string name="alter_update_title">软件更新</string>
    <string name="alter_update_yes">更新</string>
    <string name="alter_virtual_hsp">"掌医通体验医院仅供用户体验就医流程
不能作为实际就诊依据！"</string>
    <string name="alter_yes">是</string>
    <string name="app_can">可约</string>
    <string name="app_cant">已约</string>
    <string name="app_full">约满</string>
    <string name="app_id">5577ed58</string>
    <string name="app_list_reg">挂号</string>
    <string name="app_name">掌上医院</string>
    <string name="app_reg_info">提前预约,方便快捷</string>
    <string name="app_stop">截止</string>
    <string name="app_tip">提示</string>
    <string name="appointment">预约</string>
    <string name="base_function">基本功能</string>
    <string name="camerabroadcast">摄像头播报</string>
    <string name="cancel_alter_cancel">不再关注</string>
    <string name="cancel_alter_canceled">已取消关注</string>
    <string name="cancel_alter_title">取消关注后你将不再收到该医院的推送通知</string>
    <string name="cancel_app">取消预约</string>
    <string name="cancel_apping">正在取消预约</string>
    <string name="cancel_attention">取消关注</string>
    <string name="canceled_app">预约取消成功</string>
    <string name="cant_delete_default">不能删除默认就诊人</string>
    <string name="choice_patient">选择就诊人</string>
    <string name="clear_hository">清空搜索历史记录</string>
    <string name="clear_success">清空成功</string>
    <string name="click_again_to_exit">再按一次退出此应用</string>
    <string name="clinical_diagnosis">临床诊断</string>
    <string name="close">关闭</string>
    <string name="collect_cancel">已取消收藏</string>
    <string name="collect_failed">收藏出错</string>
    <string name="collected">收藏成功</string>
    <string name="comfirm">确定</string>
    <string name="comfirm1">确认</string>
    <string name="comment_dissatified">[默认评论]差评</string>
    <string name="comment_good">[默认评论]好评</string>
    <string name="comment_input_limit">可输入100字，还可以输入%1$s字</string>
    <string name="comment_normal">[默认评论]一般</string>
    <string name="complex_function">综合展示</string>
    <string name="connect_auto_fail">自动重连失败</string>
    <string name="connect_auto_reconnect">自动连接中...</string>
    <string name="connect_auto_success">自动重连成功</string>
    <string name="conntect_state_prompt_auth_unavailable">验证失败</string>
    <string name="conntect_state_prompt_disconnect">服务尚未连接</string>
    <string name="conntect_state_prompt_network_unavailable">当前网络不可用</string>
    <string name="conntect_state_prompt_other_device_login">该用户在其他设备上登录</string>
    <string name="conntect_state_prompt_service_unavailable">当前服务不可用</string>
    <string name="conntect_state_prompt_unknow_error">服务尚未连接</string>
    <string name="consult_doctor_info">为您解决疑惑</string>
    <string name="content_description">融云</string>
    <string name="converastion_list_notify_load_data">正在初始化数据....</string>
    <string name="conversation_list_action_bar_title">会话</string>
    <string name="conversation_list_set_top">已置顶</string>
    <string name="conversation_list_set_top_cancel">取消置顶</string>
    <string name="conversation_setting_clear_messages">清空聊天消息</string>
    <string name="conversation_setting_discussion_exit">删除并退出</string>
    <string name="conversation_setting_discussion_exit_failure">退出讨论失败</string>
    <string name="conversation_setting_exit_prompt">退出该讨论组后，将不再收到讨论组聊天信息，聊天记录也一并删除。确定退出？</string>
    <string name="conversation_setting_get_info_failure">获取信息失败</string>
    <string name="conversation_setting_history_message">查看聊天记录</string>
    <string name="conversation_setting_istop">置顶聊天</string>
    <string name="conversation_setting_notify">新消息通知</string>
    <string name="conversation_setting_set_bg">设置当前聊天背景</string>
    <string name="conversation_setting_title">聊天设置</string>
    <string name="count_sec">倒计时%1$s秒</string>
    <string name="current_lcation">当前定位</string>
    <string name="day">白天</string>
    <string name="daynightmode">"昼夜模式    "</string>
    <string name="default_discussion_name">讨论组</string>
    <string name="default_name">用户名</string>
    <string name="delete">删除</string>
    <string name="delete_success">删除成功</string>
    <string name="deliver_drug_info">电话服务,上门服务</string>
    <string name="dept">科室:</string>
    <string name="dept_doctor">科室医生:</string>
    <string name="deviationrecalculation">"偏航重算    "</string>
    <string name="dialog_content">是否确定发送请求？</string>
    <string name="dialog_converastion_cope_message">复制消息</string>
    <string name="dialog_converastion_delete_message">删除消息</string>
    <string name="dialog_converastion_istop">置顶该会话</string>
    <string name="dialog_converastion_istop_cancel">取消置顶</string>
    <string name="dialog_converastion_remove">从会话列表中移除</string>
    <string name="dialog_converastion_title" />
    <string name="discussion_create_failure">创建讨论组失败</string>
    <string name="discussion_create_loading_title">正在创建讨论组</string>
    <string name="discussion_remove_member_failure">删除成员失败</string>
    <string name="doctor">医生:</string>
    <string name="doctor1">医生</string>
    <string name="doctor_intr">医生介绍</string>
    <string name="download_error">下载失败</string>
    <string name="download_fail">下载出错</string>
    <string name="download_start">开始下载</string>
    <string name="download_success">下载完成</string>
    <string name="enter_origin_pwd">请输入原始密码</string>
    <string name="enter_pwd">请输入新密码</string>
    <string name="enter_pwd1">请输入密码</string>
    <string name="error_key">key验证无效！</string>
    <string name="error_network">搜索失败,请检查网络连接！</string>
    <string name="error_other">未知错误，请稍后重试!错误码为</string>
    <string name="error_verifycode">申请验证码失败</string>
    <string name="evaluate_status_have_evaluated">已评价</string>
    <string name="evaluate_status_not_evaluated">未评价</string>
    <string name="evaluation">评价</string>
    <string name="evaluation_count">评论条数</string>
    <string name="evaluation_time">评价时间:</string>
    <string name="evl_number">患者评价(%1$s)</string>
    <string name="exam_btn_refund">申请退款</string>
    <string name="exam_btn_use">使用</string>
    <string name="exam_buy_number">购买数量:</string>
    <string name="exam_card_detail">详情</string>
    <string name="exam_crowed">适用人群:</string>
    <string name="exam_detail">图文详情</string>
    <string name="exam_hsp">医院信息</string>
    <string name="exam_info">套餐信息</string>
    <string name="exam_menual">使用说明</string>
    <string name="exam_menual1">如需取消预约请至少提前3天</string>
    <string name="exam_order">订单信息</string>
    <string name="exam_order_cancel">取消订单</string>
    <string name="exam_order_id">订单号:</string>
    <string name="exam_order_number">购买数量:</string>
    <string name="exam_order_pay">总价:</string>
    <string name="exam_order_pay1">总计:</string>
    <string name="exam_order_time">提交时间:</string>
    <string name="exam_pay">付款</string>
    <string name="exam_reg_id">预约卡号:</string>
    <string name="exam_reg_pwd">预约密码:</string>
    <string name="exam_report">检查报告单</string>
    <string name="exam_saled">已售:</string>
    <string name="exam_see_detail">查看图文详情</string>
    <string name="examination_card_button_status_0">使用</string>
    <string name="examination_card_button_status_1">更改</string>
    <string name="examination_card_empty_warn">请填写必要信息</string>
    <string name="examination_card_status_0">未使用</string>
    <string name="examination_card_status_1">已使用</string>
    <string name="examination_card_status_3">已完成</string>
    <string name="examination_card_status_4">退款中</string>
    <string name="examination_card_status_5">退款成功</string>
    <string name="examination_card_status_7">退款失败</string>
    <string name="expand_hository">展开全部搜索记录</string>
    <string name="extend_navi_navi">自定义导航</string>
    <string name="extend_title">扩展功能</string>
    <string name="famous_doctor_introduction">名医推荐</string>
    <string name="famous_doctor_introduction_info">全国知名医生为您就诊</string>
    <string name="feedback_email">输入您的E-mail或其他联系方式，我们会尽快回复哦!</string>
    <string name="feedback_hint">您在使用中有遇到什么问题吗？可以随时向我们反馈哦...</string>
    <string name="finish">完成</string>
    <string name="hospital_intr">医院介绍</string>
    <string name="hospital_navigate">院内导航</string>
    <string name="hospital_travel_info">交通信息</string>
    <string name="hospitals">医院</string>
    <string name="records">记录</string>
    <string name="set_about_us">关于我们</string>
    <string name="set_feedback">意见反馈</string>
    <string name="set_menual">使用手册</string>
    <string name="set_new_version">已是最新版本</string>
    <string name="set_statment">免责申明</string>
    <string name="set_version">版本检测</string>
    <string name="set_welcome">欢迎页</string>
    <string name="setting">设置</string>
    <string name="submit">提交</string>
    <string name="title_bill">我的账单</string>
    <string name="title_envaluation">已评价</string>
    <string name="title_my_collection">我的关注</string>
    <string name="title_my_examination_card">我的体检卡</string>
    <string name="title_order">随访详细</string>
    <string name="title_patient">常用就诊人</string>
    <string name="title_report">我的报告</string>
    <string name="user_data">个人资料</string>
    <string name="usercenter">我</string>
</resources>