<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <View style="@style/LineHorizontal.Gray_d8" android:layout_marginTop="15.0dp"/>
    
    <EditText
        android:layout_width="match_parent"
        android:layout_height="150.0dp"
        android:textSize="15.0sp"
        android:textColor="@color/black_33"
        android:hint="@string/feedback_hint"
        android:gravity="center|left|top"
        android:id="@id/et_inputcontent"
        android:background="@color/white"
        android:paddingLeft="25.0dp"
        android:paddingTop="25.0dp"
        android:paddingRight="25.0dp"
        android:paddingBottom="25.0dp"
        android:textColorHint="@color/black_ab"
        />
    <View style="@style/LineHorizontal.Gray_d8"
        android:layout_marginLeft="15.0dp"
        android:layout_marginRight="15.0dp"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="15sp"

        android:hint="@string/feedback_email"

        android:background="@color/white"
        android:textColorHint="@color/black_ab"
        android:paddingLeft="25dp"
        android:paddingBottom="15dp"
        android:paddingTop="15dp"
        android:maxLines="1"
        android:lines="1"
        android:id="@id/et_link"
        />

    <View style="@style/LineHorizontal.Gray_d8"/>

    <Button
        style="@style/user_btn_submint"
        android:id="@id/btn_submit"
        android:background="@drawable/ic_button_not"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="50dp"
        android:text="@string/submit"

        />
    <!--<LinearLayout-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="200.0dp"-->
        <!--android:orientation="vertical">-->
        <!--<EditText-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="150.0dp"-->
            <!--android:hint="@string/feedback_hint"-->
            <!--/>-->
        <!--<View style="@style/LineHorizontal.Gray_d8"/>-->

        <!--<EditText-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="50.0dp"-->
            <!--android:hint="@string/feedback_email"-->
            <!--/>-->
    <!--</LinearLayout>-->

    <!--<Button-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content" />-->
</LinearLayout>