<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <FrameLayout
        android:id="@id/fragment"
        android:layout_width="match_parent"
        android:layout_height="0.0dp"
        android:layout_weight="1" />

    <View style="@style/LineHorizontal.Gray_d8" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/gray_f9"
        android:gravity="bottom"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@id/ll_hospital"
            android:layout_width="0.0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@id/iv_hospital"
                android:layout_width="20.0dp"
                android:layout_height="20.0dp"
                android:layout_marginTop="4.0dp"
                android:src="@drawable/selector_main_bottom1" />

            <TextView
                android:id="@id/tv_hospital"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5.0dip"
                android:layout_marginTop="2.0dip"
                android:text="@string/hospitals"
                android:textColor="@drawable/selector_red_and_black"
                android:textSize="@dimen/xxsmall_text_size" />
        </LinearLayout>

        <LinearLayout
            android:gravity="center"
            android:layout_weight="1"
            android:orientation="vertical"
            android:id="@id/ll_records"
            android:layout_width="0.0dp"
            android:layout_height="match_parent">

            <RelativeLayout
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:layout_height="0.0dp">
                <ImageView
                    android:layout_width="20.0dp"
                    android:layout_height="20.0dp"
                    android:layout_marginTop="4.0dp"
                    android:id="@id/iv_records"
                    android:src="@drawable/selector_main_bottom2"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@id/ll_records"
                    android:text="@string/records"
                    android:layout_marginBottom="5.0dip"
                    android:layout_marginTop="2.0dip"
                    android:textColor="@drawable/selector_red_and_black"
                    android:textSize="@dimen/xxsmall_text_size"
                    />
            </RelativeLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@id/tv_records"
                android:text="@string/records"
                android:layout_marginBottom="5.0dip"
                android:layout_marginTop="2.0dip"
                android:textColor="@drawable/selector_red_and_black"
                android:textSize="@dimen/xxsmall_text_size"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0.0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:id="@id/ll_usercenter"
            >
            <ImageView
                android:layout_width="20.0dp"
                android:layout_height="20.0dp"
                android:layout_marginTop="4.0dp"
                android:id="@id/iv_usercenter"
                android:src="@drawable/selector_main_bottom3"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@id/tv_usercenter"
                android:text="@string/usercenter"
                android:layout_marginBottom="5.0dip"
                android:layout_marginTop="2.0dip"
                android:textColor="@drawable/selector_red_and_black"
                android:textSize="@dimen/xxsmall_text_size"
                />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>